<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.umtone</groupId>
    <artifactId>uw-ops-agent</artifactId>
    <version>1.1.2</version>
    <packaging>jar</packaging>
    <name>uw-ops-agent</name>
    <description>uw-ops-agent</description>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>21</java.version>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.github.oshi</groupId>
            <artifactId>oshi-core</artifactId>
            <version>6.8.2</version>
        </dependency>
        <dependency>
            <groupId>com.umtone</groupId>
            <artifactId>uw-httpclient</artifactId>
            <version>2.1.128</version>
        </dependency>
        <dependency>
            <groupId>com.umtone</groupId>
            <artifactId>uw-common</artifactId>
            <version>1.0.83</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>2.0.16</version>
        </dependency>

    </dependencies>

    <build>
        <plugins>
<!--            <plugin>-->
<!--                <groupId>org.apache.maven.plugins</groupId>-->
<!--                <artifactId>maven-assembly-plugin</artifactId>-->
<!--                <version>3.7.0</version>-->
<!--                <configuration>-->
<!--                    <descriptorRefs>-->
<!--                        <descriptorRef>jar-with-dependencies</descriptorRef>-->
<!--                    </descriptorRefs>-->
<!--                    <archive>-->
<!--                        <manifest>-->
<!--                            <mainClass>uw.ops.agent.MainService</mainClass> &lt;!&ndash; 替换为你的主类 &ndash;&gt;-->
<!--                        </manifest>-->
<!--                    </archive>-->
<!--                </configuration>-->
<!--                <executions>-->
<!--                    <execution>-->
<!--                        <id>make-assembly</id>-->
<!--                        <phase>package</phase>-->
<!--                        <goals>-->
<!--                            <goal>single</goal>-->
<!--                        </goals>-->
<!--                    </execution>-->
<!--                </executions>-->
<!--            </plugin>-->
            <plugin>
                <groupId>org.graalvm.nativeimage</groupId>
                <artifactId>native-image-maven-plugin</artifactId>
                <version>21.2.0</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>native-image</goal>
                        </goals>
                        <phase>package</phase>
                    </execution>
                </executions>
                <configuration>
                    <imageName>ops-agent</imageName>
                    <mainClass>uw.ops.agent.MainService</mainClass>
                    <buildArgs>
                        --no-fallback
                        --verbose
                        -H:ReflectionConfigurationFiles=classes/graalvm/reflect-config.json
                        -H:DynamicProxyConfigurationFiles=classes/graalvm/proxy-config.json
                        -H:+JNI -H:JNIConfigurationFiles=classes/graalvm/jni-config.json
                        -H:ResourceConfigurationFiles=classes/graalvm/resource-config.json
                     </buildArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
